完成简单小组件开发,第一个页面完成,下一步需要连接到发起超清通话,未登录跳转登录页面

--- a/android/app/src/main/res/xml/my_home_widget_info.xml
+++ b/android/app/src/main/res/xml/my_home_widget_info.xml
@@ -3,8 +3,8 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/my_home_widget"
     android:initialLayout="@layout/my_home_widget"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="159px"
+    android:minHeight="159px"
     android:previewImage="@drawable/example_appwidget_preview"
     android:previewLayout="@layout/my_home_widget"
     android:resizeMode="horizontal|vertical"
