--- a/android/app/src/main/res/layout/my_home_widget.xml
+++ b/android/app/src/main/res/layout/my_home_widget.xml
@@ -1,19 +1,74 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.Android.AppWidget.Container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:theme="@style/Theme.Android.AppWidgetContainer">
+    android:layout_width="159dp"
+    android:layout_height="159dp"
+    android:orientation="vertical"
+    android:padding="0dp"
+    android:theme="@style/Theme.Android.AppWidgetContainer"
+    android:background="@drawable/rounded_border"
+   >
 
-    <TextView
+
+    <LinearLayout
+        android:layout_width="88dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:padding="0dp">
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/img" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="7dp"
+            android:text="与你视频"
+            android:textColor="?android:textColorPrimary"
+            android:textFontWeight="600"
+            android:textSize="14dp"/>
+
+
+
+
+    </LinearLayout>
+<!--    <TextView-->
+<!--        android:id="@+id/text_id"-->
+<!--        style="@style/Widget.Android.AppWidget.InnerView"-->
+<!--        android:layout_width="56dp"-->
+<!--        android:layout_height="20dp"-->
+<!--        android:layout_marginTop="2dp"-->
+<!--        android:contentDescription="@string/appwidget_text"-->
+<!--        android:text="@string/appwidget_text"-->
+<!--        android:textSize="24dp"-->
+<!--        android:textStyle="bold|italic" />-->
+
+    <Button
         android:id="@+id/text_id"
-        style="@style/Widget.Android.AppWidget.InnerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
-</RelativeLayout>
+        android:layout_width="44dp"
+        android:layout_height="62dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
+        android:padding="0dp"
+        android:text="新建通话"
+        android:textColor="#007AFF"
+        android:textFontWeight="600"
+        android:textSize="22dp"
+        android:textStyle="bold">
+
+
+
+    </Button>
+
+
+
+</LinearLayout>
