--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="light_blue_200">#FF81D4FA</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
+    <!-- 白天背景颜色 -->
+    <color name="day_background_color">#FFFFFF</color> <!-- 白色 -->
+
+    <!-- 晚上背景颜色 -->
+    <color name="night_background_color">#000000</color> <!-- 黑色 -->
+
 </resources>
